--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(@restaurant) do |f| %>
+<%= simple_form_for [@restaurant, @review] do |f| %>
   <% if @restaurant.errors.any? %>
     <div class="errors-container">
       <ul>
@@ -10,12 +10,11 @@
   <% end %>
 
   <div class="form-inputs">
-    <%= f.input :name %>
-    <%= f.input :category, :collection => %w[Chinese Italian Japanese French Belgian] %>
-    <%= f.input :stars %>
+    <%= f.input :content %>
+    <%= f.input :rating, :collection => %w[1 2 3 4 5] %>
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit %>
+    <%= f.button :submit, class: 'btn btn-primary' %>
   </div>
 <% end %>
