passes rake test

--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -11,7 +11,8 @@
 
   <div class="form-inputs">
     <%= f.input :name %>
-    <%= f.input :category, :collection => %w[Chinese Italian Japanese French Belgian] %>
+    <%= f.input :address %>
+    <%= f.input :category, :collection => %w[chinese italian japanese french belgian] %>
     <%= f.input :stars %>
   </div>
 
